--- a/LastModel/templates/LastModel/Results.html
+++ b/LastModel/templates/LastModel/Results.html
@@ -7,7 +7,12 @@
 
 {% block content %}
 <p>
-    Your total payoff is {{ player.payoff }}
+    In Module 1, your payoff is {{ pay1 }} ECUs.
+    In Module 2, your payoff is {{ pay2 }} ECUs.
+    In Module 3, your payoff is {{ pay3 }} ECUs.
+    In Module 4, your payoff is {{ pay4 }} ECUs.
+    In Module 5, your payoff is {{ pay5 }} ECUs.
+    Your total payoff is {{ total }}
 </p>
     {% next_button %}
 {% endblock %}
