--- a/M2_die_match/templates/M2_die_match/Introduction.html
+++ b/M2_die_match/templates/M2_die_match/Introduction.html
@@ -2,7 +2,7 @@
 {% load otree static %}
 
 {% block title %}
-    Introduction of Model 2
+    Introduction of Module 2
 {% endblock %}
 
 {% block content %}
