--- a/M2_die_match/templates/M2_die_match/Results.html
+++ b/M2_die_match/templates/M2_die_match/Results.html
@@ -2,11 +2,13 @@
 {% load otree static %}
 
 {% block title %}
-    Page title
+    Module 2: End
 {% endblock %}
 
 {% block content %}
-
+<p>
+    This is the end of Module 2.
+</p>
     {% next_button %}
 {% endblock %}
 
