--- a/M2_die_match/templates/M2_die_match/RoundPred.html
+++ b/M2_die_match/templates/M2_die_match/RoundPred.html
@@ -1,7 +1,7 @@
 {% extends "global/Page.html" %}
 {% load otree static %}
 {% block title %}
-    Model 2 -- Round Predict
+    Module 2 Round {{ round_num }}-- Round Predict
 {% endblock %}
 {% block content %}
 <p>
