--- a/M1_dictator/templates/M1_dictator/Instructions.html
+++ b/M1_dictator/templates/M1_dictator/Instructions.html
@@ -55,6 +55,10 @@
 
 {% block styles %}
 	  <style>
+	  	li {
+    		list-style-type: none;
+    		display : inline;
+    	}
 	    table, th, td {
 	    padding: 15px;
 	    border: 1px solid #ddd;
