--- a/M1_dictator/templates/M1_dictator/Introduction.html
+++ b/M1_dictator/templates/M1_dictator/Introduction.html
@@ -5,6 +5,6 @@
 {% block content %}
 {% include Constants.instructions_template %}
     <p>
-    <button class="otree-btn-next btn btn-primary">继续</button>
+    <button class="otree-btn-next btn btn-primary">next</button>
     </p>
 {% endblock %}
