--- a/M2_die_match/templates/M2_die_match/DiceRolling2.html
+++ b/M2_die_match/templates/M2_die_match/DiceRolling2.html
@@ -1,7 +1,7 @@
 {% extends "global/Page.html" %}
 {% load staticfiles otree %}
 {% block title %}
-    Release of the Die -- Part 1
+    Module 2 Round {{ round_num }}: Release of the Virtual Die
 {% endblock %}
 
 {% block content %}
