--- a/M2_die_match/templates/M2_die_match/ModelPred.html
+++ b/M2_die_match/templates/M2_die_match/ModelPred.html
@@ -1,7 +1,7 @@
 {% extends "global/Page.html" %}
 {% load otree static %}
 {% block title %}
-    Model 2 -- Model Predict
+    Module 2 -- Model Predict
 {% endblock %}
 {% block content %}
 <p>
