--- a/M3_die_match_progressive/templates/M3_die_match_progressive/DiceRolling.html
+++ b/M3_die_match_progressive/templates/M3_die_match_progressive/DiceRolling.html
@@ -1,7 +1,7 @@
 {% extends "global/Page.html" %}
 {% load staticfiles otree %}
 {% block title %}
-    Release of the Die -- Part 1
+    Module 3 Round {{ round_num }}: Release of the Virtual Die
 {% endblock %}
 
 {% block content %}
