--- a/M3_die_match_progressive/templates/M3_die_match_progressive/Introduction.html
+++ b/M3_die_match_progressive/templates/M3_die_match_progressive/Introduction.html
@@ -2,7 +2,7 @@
 {% load otree static %}
 
 {% block title %}
-    Introduction of Model 3
+    Introduction of Module 3
 {% endblock %}
 
 {% block content %}
