--- a/M3_die_match_progressive/templates/M3_die_match_progressive/Results.html
+++ b/M3_die_match_progressive/templates/M3_die_match_progressive/Results.html
@@ -2,11 +2,13 @@
 {% load otree static %}
 
 {% block title %}
-    Page title
+    Module 3: End
 {% endblock %}
 
 {% block content %}
-
+<p>
+    This is the end of Module 3.
+</p>
     {% next_button %}
 {% endblock %}
 
