--- a/M3_die_match_progressive/templates/M3_die_match_progressive/RoundPred.html
+++ b/M3_die_match_progressive/templates/M3_die_match_progressive/RoundPred.html
@@ -1,7 +1,7 @@
 {% extends "global/Page.html" %}
 {% load otree static %}
 {% block title %}
-    Model 3 -- Round Predict
+    Module 3 -- Round Predict
 {% endblock %}
 {% block content %}
 <p>
