--- a/M5_number_add1/templates/M5_number_add1/Introduction.html
+++ b/M5_number_add1/templates/M5_number_add1/Introduction.html
@@ -2,7 +2,7 @@
 {% load staticfiles otree_tags %}
 
 {% block title %}
-    Introduction
+    Module 5: Introduction
 {% endblock %}
 
 {% block content %}
