--- a/M1_dictator/templates/M1_dictator/Instructions.html
+++ b/M1_dictator/templates/M1_dictator/Instructions.html
@@ -47,6 +47,8 @@
 				</tr>
 			      </table>
 		</li>
+			   <li>You will be informed of your earnings for this module at the end of the experiment.</li>
+			  <li>The exchange rate is: <strong>500 ECUs = 1  £ </strong></li>
           </ul>
 
 	  {% next_button %}
