--- a/M3_die_match_progressive/templates/M3_die_match_progressive/Introduction.html
+++ b/M3_die_match_progressive/templates/M3_die_match_progressive/Introduction.html
@@ -18,9 +18,9 @@
 <p>
     Then each person in the group will roll a virtual die on the computer screen. The person who rolls the largest number
     will receive the High Outcome from the matched group; the person who rolls the medium number will receive the Medium
-    Outcome; the person who rolls the smallest number will receive the Low Outcome. Ties are broken by flipping a virtual f
-    air coin. Your Matched Income is <strong>200 ECUs</strong> times the Outcome if you got the High Outcome, <strong>150 ECUs</strong>
-    times the Outcome if you got the Medium Outcome, and <strong>100 ECUs</strong> times the Outcome if you got the Low Outcome.
+    Outcome; the person who rolls the smallest number will receive the Low Outcome. Ties are broken by flipping a virtual
+    fair coin. Your Matched Income is <strong>200 ECUs </strong>times the Outcome if you got the High Outcome, <strong>150 ECUs</strong> times the Outcome
+    if you got the Medium Outcome, and <strong> 100 ECUs </strong>times the Outcome if you got the Low Outcome.
 
 </p>
 <p>
