--- a/LastModel/templates/LastModel/Results.html
+++ b/LastModel/templates/LastModel/Results.html
@@ -2,16 +2,21 @@
 {% load otree static %}
 
 {% block title %}
-    Result of Number Adding Model
+    Final Result
 {% endblock %}
 
 {% block content %}
 <p>
     In Module 1, your payoff is {{ pay1 }} ECUs.
+    <br>
     In Module 2, your payoff is {{ pay2 }} ECUs.
+    <br>
     In Module 3, your payoff is {{ pay3 }} ECUs.
+    <br>
     In Module 4, your payoff is {{ pay4 }} ECUs.
+    <br>
     In Module 5, your payoff is {{ pay5 }} ECUs.
+    <br>
     Your total payoff is {{ total }}
 </p>
     {% next_button %}
