--- a/M3_die_match_progressive/templates/M3_die_match_progressive/Introduction.html
+++ b/M3_die_match_progressive/templates/M3_die_match_progressive/Introduction.html
@@ -46,13 +46,13 @@
   <tr>
     <th>Number Thrown</th>
       {% for number in Constants.thrown %}
-        <th>{{number}}</th>
+        <th>&nbsp&nbsp&nbsp&nbsp{{number}}&nbsp&nbsp&nbsp&nbsp</th>
       {% endfor %}
   </tr>
   <tr>
     <td>Resulting Payoff</td>
       {% for reward in Constants.reward %}
-        <td>{{reward}}</td>
+        <td>&nbsp&nbsp&nbsp&nbsp{{reward}}ECUs&nbsp</td>
       {% endfor %}
   </tr>
 </table>
