--- a/M2_die_match/templates/M2_die_match/Introduction.html
+++ b/M2_die_match/templates/M2_die_match/Introduction.html
@@ -40,17 +40,17 @@
 </p>
 <br>
 
-<table border="1">
+<table border="all">
   <tr>
     <th>Number Thrown</th>
       {% for number in Constants.thrown %}
-        <th>{{number}}</th>
+        <th>  &nbsp;&nbsp;&nbsp;&nbsp;  {{number}}   &nbsp;&nbsp;&nbsp;&nbsp; </th>
       {% endfor %}
   </tr>
   <tr>
     <td>Resulting Payoff</td>
       {% for reward in Constants.reward %}
-        <td>{{reward}}</td>
+        <td> &nbsp;&nbsp;&nbsp;&nbsp;{{reward}} ECUs &nbsp;&nbsp;&nbsp;&nbsp;  </td>
       {% endfor %}
   </tr>
 </table>
