--- a/M2_die_match/templates/M2_die_match/MatchedOutcome.html
+++ b/M2_die_match/templates/M2_die_match/MatchedOutcome.html
@@ -8,7 +8,7 @@
 {% block content %}
 <p>
     You are the {{ player.matched_level }} place in your group.
-    Your matched payoff is  {{ player.matched_payoff }}.
+    Your matched payoff is  {{ player.matched_payoff }} ECUs.
 </p>
     {% next_button %}
 {% endblock %}
