--- a/M5_number_add1/templates/M5_number_add1/ModelPred.html
+++ b/M5_number_add1/templates/M5_number_add1/ModelPred.html
@@ -1,11 +1,11 @@
 {% extends "global/Page.html" %}
 {% load otree static %}
 {% block title %}
-    Model 5 -- Model Predict
+    Module 5 -- Module Predict
 {% endblock %}
 {% block content %}
 <p>
-    Please predict your total Matched Income from<storng> all </storng>rounds of this Module: whether you will be in the top third, middle
+    Please predict your overall performance on the adding numbers task from<storng> all </storng>rounds of this Module: whether you will be in the top third, middle
     third or bottom third. Correct prediction will be rewarded <strong>100 ECUs</strong>.
 </p>
 {% formfield player.modelPred with label = 'Please predict:'%}
