--- a/M1_dictator/templates/M1_dictator/Offer.html
+++ b/M1_dictator/templates/M1_dictator/Offer.html
@@ -11,7 +11,9 @@ share with Player 2?
 
 <br>
 <br>
-    {% formfield group.kept label=""%}
+<table>
+    <th>{{ form.kept }}</th><th>ECUs</th>
+</table>
     {% next_button %}
 
 {% endblock %}
